core/unpackaged/main/default/objects/LogStatus__mdt/LogStatus__mdt.object-meta.xml
<CustomObject>
    <description>Used to configure in Nebula Logger which picklist values in Log__c.Status__c are considered open/closed and resolved/unresolved</description>
    <label>Log Status</label>
    <pluralLabel>Log Statuses</pluralLabel>
</CustomObject>