core/unpackaged/main/default/objects/LogStatus__mdt/validationRules/Only_closed_can_be_resolved.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_closed_can_be_resolved</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    IsClosed__c = false,
    IsResolved__c = true
)</errorConditionFormula>
    <errorDisplayField>IsResolved__c</errorDisplayField>
    <errorMessage>Is Resolved cannot be set to true unless Is Closed is true</errorMessage>
</ValidationRule>